# blixard

./: .gitignore  .mcp.json  .sops.yaml  AI_PROMPT_FIX_TEST_SUITE.md  ALPN_FIX_SUMMARY.md  ALPN_PROTOCOL_DEBUG.md  ALPN_TEST_SUMMARY.md  BLIXARD_ERROR_MACRO_ANALYSIS.md  CEDAR_ENROLLMENT_COMPLETE.md  CEDAR_IROH_INTEGRATION_COMPLETE.md  CEDAR_IROH_INTEGRATION_PLAN.md  CEDAR_MIGRATION_AUDIT_REPORT.md  CEDAR_PHASE3_COMPLETE.md  CEDAR_PHASE4_COMPLETE.md  CLAUDE.md  CLUSTER_FIXES_TESTING_STATUS.md  CLUSTER_FORMATION_DEBUG.md  CLUSTER_FORMATION_FIXES_SUMMARY.md  CODE_CLEANUP_SUMMARY.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_REPORT.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_STATUS_REPORT.md  COMPREHENSIVE_REFACTORING_SUMMARY.md  CONSENSUS_AND_TEST_FIXES_SUMMARY.md  Cargo.toml  DATABASE_TRANSACTION_GUIDE.md  DETERMINISM_FIX_SUMMARY.md  DETERMINISTIC_TESTING_REALITY_CHECK.md  DETERMINISTIC_TESTING_STATUS.md  DETERMINISTIC_TESTING_SUMMARY.md  DEVELOPMENT_METHODOLOGY.md  DISTRIBUTED_STORAGE_TESTING_SUMMARY.md  DISTRIBUTED_STORAGE_TESTS_SUMMARY.md  ERROR_CONSOLIDATION_PHASE1.md  ERROR_CONTEXT_NETWORK_MIGRATION.md  FACTORY_PATTERN_SUMMARY.md  FAILPOINT_IMPLEMENTATION_SUMMARY.md  FINAL_REALITY_CHECK.md  FINAL_SIMULATION_STATUS.md  (+185 more)
blixard/: Cargo.toml  fix_warnings.sh
blixard-core/: CODE_REVIEW_GUIDELINES.md  COMPILATION_FIXES_PROGRESS.md  CRITICAL_PATH_SUMMARY.md  Cargo.toml  FEATURE_COMPATIBILITY_MATRIX.md  FORK_VS_CUSTOM_ANALYSIS.md  GRPC_TEST_REMOVAL_SUMMARY.md  IROH_BENCHMARK_RESULTS.md  IROH_CRITICAL_PATH_TO_WORKING.md  IROH_CUSTOM_IMPLEMENTATION_PLAN.md  IROH_CUSTOM_RPC_STATUS.md  IROH_DEFAULT_MIGRATION.md  IROH_INTEGRATION_COMPLETE.md  IROH_INTEGRATION_STATUS.md  IROH_INTEGRATION_SUMMARY.md  IROH_LOCAL_TEST_SUMMARY.md  IROH_MIGRATION_PHASE5_STATUS.md  IROH_MIGRATION_PLAN.md  IROH_MIGRATION_TONIC_TRANSPORT_STATUS.md  IROH_NAT_TRAVERSAL_RESULTS.md  IROH_PERFORMANCE_RESULTS.md  IROH_PHASE5_SUMMARY.md  IROH_PRODUCTION_READINESS.md  IROH_RAFT_VALIDATION_SUMMARY.md  IROH_RPC_WORKING_PROOF.md  IROH_SESSION_SUMMARY.md  IROH_TRANSPORT_V2_MIGRATION_PLAN.md  MEMORY_OPTIMIZATION_GUIDE.md  MEMORY_OPTIMIZATION_SUMMARY.md  MINIMAL_WORKING_FIXES.md  NIX_INTEGRATION_GUIDE.md  NIX_VM_IMAGE_P2P_IMPLEMENTATION.md  OPENTELEMETRY_MIGRATION.md  P2P_IMPLEMENTATION_STATUS.md  P2P_IMPLEMENTATION_SUMMARY.md  P2P_METRICS_GUIDE.md  P2P_ROADMAP.md  P2P_STATUS_REPORT.md  PERFORMANCE_OPTIMIZATIONS_REPORT.md  PHASE1_UNWRAP_FIXES.md  (+14 more)
blixard-core/benches/: raft_transport_bench.rs
blixard-core/docs/: BLOB_SHARING_IMPLEMENTATION.md  FAILPOINTS.md  IROH_DEVELOPMENT_GUIDE.md  IROH_OPERATIONS_RUNBOOK.md  IROH_RAFT_TRANSPORT.md  TRANSPORT_SWITCHING_GUIDE.md  VOPR_FUZZER.md
blixard-core/examples/: GRPC_CLEANUP_SUMMARY.md  arc_refactoring_demo.rs  blob_sharing_demo.rs  cedar_auth_example.rs  cedar_grpc_integration.rs  cedar_integration_test.rs  cedar_simple_demo.rs  create_microvm.rs  create_vm_with_ssh.rs  discovery_demo.rs  dual_transport_demo.rs  dual_transport_demo.rs.disabled  error_macros_demo.rs  failpoint_demo.rs  inspect_vm_data.rs  iroh_basic_test.rs  iroh_cluster_demo.rs  iroh_connection_test.rs  iroh_docs_demo.rs  iroh_docs_multi_writer.rs  iroh_enrollment_demo.rs  iroh_nat_traversal_test.rs  iroh_network_test.rs  iroh_raft_benchmark.rs  iroh_raft_integration_test.rs  iroh_raft_transport_demo.rs  iroh_rpc_demo.rs  iroh_simple_cluster.rs  iroh_three_node_test.rs  metrics_example.rs  minimal_iroh_demo.rs  minimal_iroh_node.rs  nix_image_verification.rs  nix_nar_hash_demo.rs  nix_vm_image_demo.rs  p2p_join_test.rs  p2p_metrics_demo.rs  quick_transport_test.rs  raft_transport_comparison.rs.disabled  secure_iroh_demo.rs  (+26 more)
blixard-core/monitoring/: grafana-iroh-dashboard.json  iroh_rules.yml  prometheus-iroh.yml
blixard-core/proto/: blixard.proto
blixard-core/scripts/: iroh-migration.sh  run-vopr-fuzzer.sh  test-iroh-locally.sh  test-transport-suite.sh
blixard-core/src/: anti_affinity.rs  audit_integration.rs  audit_log.rs  auth_interceptor.rs  backup_manager.rs  backup_replication.rs  caching.rs  cedar_authz.rs  cert_generator.rs  cluster_state.rs  config.rs  config_global.rs  config_hot_reload.rs  config_v2.rs  config_v2.rs.backup  config_watcher.rs  connection_pool.rs  error.rs  failpoints.rs  grpc_security.rs  grpc_server.rs  grpc_server_legacy.rs  ip_allocation_service.rs  ip_pool.rs  ip_pool_manager.rs  iroh_transport.rs  iroh_transport_stub.rs  iroh_transport_v2.rs  iroh_transport_v3.rs  iroh_types.rs  lib.rs  linearizability.rs  metrics.rs  metrics_otel.rs  metrics_otel.rs.backup  metrics_otel_optimized.rs  metrics_otel_v2.rs  metrics_server.rs  network_isolated_backend.rs  nix_image_store.rs  (+51 more)
blixard-core/tests/: alpn_connection_test.rs  alpn_simple_test.rs  anti_affinity_scheduler_test.rs  anti_affinity_serialization_test.rs  audit_log_test.rs  auth_integration_test.rs.disabled  backup_manager_test.rs.disabled  backup_replication_test.rs  cedar_grpc_integration_test.rs  cedar_grpc_integration_test.rs.disabled  cedar_policy_tests.rs  chaos_testing.rs  cli_tests.rs  concurrent_cluster_tests.rs  config_hot_reload_test.rs.disabled  config_tests.rs  connection_pool_metrics_test.rs.disabled  debug_config_test.rs  default_transport_test.rs  discovery_integration_test.rs  distributed_vm_management_test.rs  error_proptest.rs  error_tests.rs  failpoint_tests.rs  grpc_comprehensive_tests.rs  grpc_metrics_test.rs  grpc_metrics_test.rs.disabled  grpc_vm_methods_tests.rs  grpc_vm_methods_tests.rs.disabled  ip_pool_integration_test.rs  ip_pool_proptest.rs  iroh_custom_rpc_test.rs  iroh_default_integration_test.rs  iroh_dual_transport_test.rs  iroh_identity_enrollment_test.rs  join_debug_test.rs  (+88 more)
blixard-vm/: Cargo.toml
rust/: Cargo.toml  flake.nix  rust-toolchain.toml
simulation/: CLAUDE.md  Cargo.toml  MADSIM_FINAL_STATUS.md  MADSIM_PROTO_FIX_SUMMARY.md  MADSIM_RAFT_TESTS_SUCCESS.md  MADSIM_RAFT_UPDATE_GUIDE.md  MADSIM_STATUS.md  MADSIM_TONIC_FIX_SUMMARY.md  RAFT_CONSENSUS_TESTS.md  RAFT_REAL_VS_MOCK_SUMMARY.md  RAFT_SEND_TRAIT_FIX.md  RAFT_TEST_FIX_SUMMARY.md  README.md  build.rs  migrate_tests.sh
(+746 files in other folders)
