[workspace]
members = [".", "simulation"]
resolver = "2"

[package]
name = "blixard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Distributed microVM orchestration platform"
authors = ["Blixard Contributors"]

[dependencies]
# Consensus
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
raft-proto = { version = "0.7", default-features = false, features = ["prost-codec"] }

# Storage
redb = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime (configured conditionally below)
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"

# Networking (tonic configured conditionally below)
prost = "0.12"
tower = "0.4"

# System interaction
nix = "0.27"
procfs = "0.16"
systemd = "0.10"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
bytes = "1.5"
rand = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
scopeguard = "1.2"

fail = { version = "0.5", optional = true }

# Conditional dependencies based on madsim cfg
[target.'cfg(not(madsim))'.dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
tokio-stream = { version = "0.1", features = ["net"] }

[target.'cfg(madsim)'.dependencies]
tokio = { version = "0.2", package = "madsim-tokio", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal"] }
tonic = { version = "0.5", package = "madsim-tonic" }
tokio-stream = "0.1"

[dev-dependencies]

proptest-derive = "0.4"

# Property-based testing
proptest = "1.4"
test-case = "3.3"
rstest = "0.18"
quickcheck = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

# Fault injection
fail = { version = "0.5", features = ["failpoints"] }

# Model checking
stateright = "0.30"

# Test utilities
tempfile = "3.8"
criterion = "0.5"
pretty_assertions = "1.4"
insta = "1.34"
tracing-test = "0.2"
serial_test = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"

# Network simulation
pnet = "0.34"
pcap = "1.1"

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
failpoints = ["fail/failpoints"]
simulation = []

[[bin]]
name = "blixard"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

