[workspace]
members = ["blixard", "blixard-core", "blixard-vm"]
resolver = "2"

[workspace.dependencies]
# Common dependencies shared across crates
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Raft consensus
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
raft-proto = { version = "0.7", default-features = false, features = ["prost-codec"] }

# Storage
redb = "2.0"
bincode = "1.3"

# gRPC/Networking  
prost = "0.13"
tonic = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

[patch.crates-io]
iroh-blobs = { git = "https://github.com/n0-computer/iroh-blobs", branch = "Frando/gc-protect" }