[package]
name = "blixard-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Distributed consensus and state management for Blixard"
authors = ["Blixard Contributors"]

[dependencies]
# Consensus
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
raft-proto = { version = "0.7", default-features = false, features = ["prost-codec"] }
protobuf = "2.28"

# Storage
redb = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime (configured conditionally below)
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"

# Metrics and Observability
opentelemetry = { version = "0.20", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.13", features = ["metrics", "trace", "tonic"] }
opentelemetry-prometheus = "0.13"
prometheus = "0.13"
tracing-opentelemetry = "0.20"

# Networking (tonic configured conditionally below)
prost = "0.13"
tower = "0.4"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
bytes = "1.5"
rand = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
scopeguard = "1.2"
num_cpus = "1.16"
static_assertions = "1.1"

# VM management dependencies  
tera = "1.19"


fail = { version = "0.5", optional = true }

# Conditional dependencies based on madsim cfg
[target.'cfg(not(madsim))'.dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }

[target.'cfg(madsim)'.dependencies]
tokio = { version = "0.2", package = "madsim-tokio", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal"] }
tonic = { version = "0.5", package = "madsim-tonic" }
tokio-stream = "0.1"

[dev-dependencies]
proptest-derive = "0.4"

# Property-based testing
proptest = "1.4"
test-case = "3.3"
rstest = "0.18"
quickcheck = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

# Fault injection
fail = { version = "0.5", features = ["failpoints"] }

# Model checking
stateright = "0.30"

# Test utilities
tempfile = "3.8"
criterion = "0.5"
pretty_assertions = "1.4"
insta = "1.34"
tracing-test = "0.2"
serial_test = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"

# Network simulation
pnet = "0.34"
pcap = "1.1"

[build-dependencies]
tonic-build = "0.12"

[features]
default = []
failpoints = ["fail/failpoints"]
test-helpers = []