[package]
name = "blixard-vm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "VM lifecycle management for Blixard using microvm.nix"
authors = ["Blixard Contributors"]

[dependencies]
# Core types and interfaces
blixard-core = { path = "../blixard-core" }

# Storage (needed for factory pattern)
redb = "2.0"

# Async runtime
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# System interaction
nix = "0.27"
procfs = "0.16"
systemd = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template engine for Nix generation
tera = "1.19"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
tempfile = "3.8"

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
default = []