[package]
name = "blixard-vm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "VM lifecycle management for Blixard using microvm.nix"
authors = ["Blixard Contributors"]

[dependencies]
# Core types and interfaces
blixard-core = { path = "../blixard-core" }

# Storage (needed for factory pattern)
redb = { workspace = true }

# Async runtime
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# System interaction
nix = { workspace = true }
procfs = { workspace = true }
systemd = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Template engine for Nix generation
tera = { workspace = true }

# Utilities
uuid = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }

# HTTP client for health checks
reqwest = { workspace = true }

# Regular expressions for console pattern matching
regex = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = []