[package]
name = "blixard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Distributed microVM orchestration platform"
authors = ["Blixard Contributors"]

[dependencies]
# Core functionality
blixard-core = { path = "../blixard-core" }
blixard-vm = { path = "../blixard-vm" }

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC client
tonic = "0.12"

# Configuration
serde = { version = "1.0", features = ["derive"] }

# File operations
glob = "0.3"

# TUI
ratatui = "0.26"
crossterm = "0.28"

[features]
default = []
test-helpers = ["blixard-core/test-helpers"]

[[bin]]
name = "blixard"
path = "src/main.rs"

[[example]]
name = "metrics_demo"
path = "../examples/metrics_demo.rs"