[package]
name = "blixard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Distributed microVM orchestration platform"
authors = ["Blixard Contributors"]

[dependencies]
# Core functionality
blixard-core = { path = "../blixard-core" }
blixard-vm = { path = "../blixard-vm" }

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

# Error handling
thiserror = "1.0"

# For examples
tempfile = "3.8"
anyhow = "1.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC client
tonic = "0.12"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# File operations
glob = "0.3"

# System calls (for daemon mode)
libc = "0.2"

# TUI
ratatui = "0.26"
crossterm = "0.28"

# Random number generation for resource simulation
rand = "0.8"

# Database for cluster state
redb = "2.0"

# P2P networking
iroh = "0.90"

# Encoding
base64 = "0.22"

[features]
default = []
test-helpers = ["blixard-core/test-helpers"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[[bin]]
name = "blixard"
path = "src/main.rs"

[[example]]
name = "metrics_demo"
path = "../examples/metrics_demo.rs"

[[example]]
name = "grpc_with_auth"
path = "../examples/grpc_with_auth.rs"

[[example]]
name = "secure_cluster_demo"
path = "../examples/secure_cluster_demo.rs"

[[example]]
name = "connection_pool_demo"
path = "../examples/connection_pool_demo.rs"

[[example]]
name = "p2p_image_sharing"
path = "../examples/p2p_image_sharing.rs"

[[example]]
name = "tui_p2p_demo"
path = "../examples/tui_p2p_demo.rs"

[[example]]
name = "raft_batch_demo"
path = "../examples/raft_batch_demo.rs"

[[example]]
name = "raft_batch_simple_demo"
path = "../examples/raft_batch_simple_demo.rs"

[[example]]
name = "anti_affinity_demo"
path = "../examples/anti_affinity_demo.rs"