[package]
name = "blixard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Distributed microVM orchestration platform"
authors = ["Blixard Contributors"]
default-run = "blixard"

[dependencies]
# Core functionality
blixard-core = { path = "../blixard-core" }
blixard-vm = { path = "../blixard-vm" }

# CLI
clap = { workspace = true }
dialoguer = { workspace = true }

# Error handling
thiserror = { workspace = true }

# For examples
tempfile = { workspace = true }
anyhow = { workspace = true }
color-eyre = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
tokio = { workspace = true }

# gRPC client
tonic = { workspace = true }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }

# File operations
glob = { workspace = true }

# Daemon mode (safe alternative to libc calls)
daemonize = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Random number generation for resource simulation
rand = { workspace = true }

# Database for cluster state
redb = { workspace = true }

# P2P networking
iroh = { workspace = true }

# Encoding
base64 = { workspace = true }

[features]
default = []
test-helpers = ["blixard-core/test-helpers"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[[bin]]
name = "blixard"
path = "src/main.rs"

[[example]]
name = "metrics_demo"
path = "../examples/metrics_demo.rs"

[[example]]
name = "grpc_with_auth"
path = "../examples/grpc_with_auth.rs"

[[example]]
name = "secure_cluster_demo"
path = "../examples/secure_cluster_demo.rs"

[[example]]
name = "connection_pool_demo"
path = "../examples/connection_pool_demo.rs"

[[example]]
name = "p2p_image_sharing"
path = "../examples/p2p_image_sharing.rs"

[[example]]
name = "tui_p2p_demo"
path = "../examples/tui_p2p_demo.rs"

[[example]]
name = "raft_batch_demo"
path = "../examples/raft_batch_demo.rs"

[[example]]
name = "raft_batch_simple_demo"
path = "../examples/raft_batch_simple_demo.rs"

[[example]]
name = "anti_affinity_demo"
path = "../examples/anti_affinity_demo.rs"