[package]
name = "blixard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Consensus
raft = "0.7"  # tikv/raft-rs
protobuf = "3.3"

# Storage
redb = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
tonic = "0.11"
prost = "0.12"
tower = "0.4"

# System interaction
nix = "0.27"
procfs = "0.16"
systemd = "0.10"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
bytes = "1.5"

[dev-dependencies]
# Deterministic simulation testing (CRITICAL)
madsim = "0.2"
turmoil = "0.6"
mock_instant = "0.3"

# Property-based testing
proptest = "1.4"
test-case = "3.3"
rstest = "0.18"

# Fault injection
fail = { version = "0.5", features = ["failpoints"] }

# Model checking
stateright = "0.30"

# Test utilities
tempfile = "3.8"
criterion = "0.5"
pretty_assertions = "1.4"

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
failpoints = ["fail/failpoints"]
simulation = ["madsim"]

[[bin]]
name = "blixard"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true