[package]
name = "blixard-simulation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
blixard = { path = ".." }

anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
clap = "4.4"
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Use madsim versions of async libraries
[target.'cfg(madsim)'.dependencies]
tokio = { version = "0.2", package = "madsim-tokio", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal", "fs"] }
tonic = { version = "0.5", package = "madsim-tonic" }
tokio-stream = "0.1"

# Use real versions when not in simulation
[target.'cfg(not(madsim))'.dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
tokio-stream = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
madsim = { version = "0.2", features = ["rpc"] }
futures = "0.3"

[features]
default = []

# Exclude broken examples from build
[[example]]
name = "proper_madsim_patterns"
path = "examples/proper_madsim_patterns.rs"
required-features = ["skip_broken_examples"]