[workspace]
members = ["."]
resolver = "2"

[package]
name = "blixard-simulation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Note: blixard-core dependency disabled due to tonic version conflicts with madsim-tonic
# Simulation tests should mock the behavior they need to test
# blixard-core = { path = "../blixard-core" }

anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
clap = "4.4"
futures = "0.3"
lazy_static = "1.4"
prost = "0.13"  # Required for generated proto code
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
tempfile = "3.8"

# Raft dependencies (matching main crate)
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
raft-proto = { version = "0.7", default-features = false, features = ["prost-codec"] }
redb = "2.0"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"
thiserror = "2"

# Always use madsim versions for simulation testing
madsim = { version = "0.2", features = ["rpc"] }
tokio = { version = "0.2", package = "madsim-tokio" }
tonic = { version = "0.5", package = "madsim-tonic" }
tokio-stream = "0.1"
protobuf = "2.28"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
proptest = "1.4"

[build-dependencies]
tonic-build = { version = "0.5", package = "madsim-tonic-build" }

[features]
default = []
test-helpers = []
simulation = []
skip_broken_examples = []

# Exclude broken examples from build
[[example]]
name = "proper_madsim_patterns"
path = "examples/proper_madsim_patterns.rs"
required-features = ["skip_broken_examples"]
